// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-container draws a uniform 1px border when only a color is given 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%; border: 1px solid #e2d9cf;"
    width="100%"
  >
    <tbody>
      <tr>
        <td />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-container draws only the sides that have a width 1`] = `
<DocumentFragment>
  <table
    bgcolor="#F4EEE7"
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%; background-color: rgb(244, 238, 231); border-left: 3px solid #8A1338;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding: 20px 24px 20px 24px;"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-container renders with default values 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
